--- a/hbase85.cabal
+++ b/hbase85.cabal
@@ -15,7 +15,7 @@ build-type:          Simple
 cabal-version:       >=1.8
 
 library
-  exposed-modules:     Codec.Base85
+  exposed-modules:     Codec.Base85, Codec.Base85.Internal
   hs-source-dirs:      src
   build-depends:       base ==4.5.*,
                        bytestring,
